# maniatic-launcher

./: .gitignore  README.md  meson.build  pyproject.toml
data/: io.github.Rubberduckycooly.RSDKv5-Decompilation.appdata.xml  io.github.Rubberduckycooly.RSDKv5-Decompilation.desktop  io.github.Rubberduckycooly.RSDKv5.appdata.xml  io.github.Rubberduckycooly.RSDKv5.desktop  io.github.santiagocezar.maniatic-launcher.appdata.xml  io.github.santiagocezar.maniatic-launcher.desktop  meson.build
maniatic/: __init__.py  launcher.py  maniatic.in  meson.build  setup_game.py
maniatic/ui/: main.blp  maniatic.gresource.xml  meson.build  style.css
