[tool.poetry]
name = "maniatic"
version = "0.1.0"
description = ""
authors = ["Santiago Cézar <santiagocezar2013@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
PyGObject = "^3.42.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
