install_data(
    'io.github.Rubberduckycooly.RSDKv5-Decompilation.svg',
    install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'icons/hicolor/scalable/apps')
)

install_data(
    'io.github.Rubberduckycooly.RSDKv5-Decompilation.desktop',
    install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'applications')
)

install_data(
    'io.github.Rubberduckycooly.RSDKv5-Decompilation.appdata.xml',
    install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'appdata')
)
