install_data(
    'io.github.santiagocezar.maniatic-launcher.svg',
    install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'icons/hicolor/scalable/apps')
)

install_data(
    'io.github.santiagocezar.maniatic-launcher.desktop',
    install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'applications')
)

install_data(
    'io.github.santiagocezar.maniatic-launcher.appdata.xml',
    install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'appdata')
)
